# ChangeLog for app-misc/byobu
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/byobu/ChangeLog,v 1.91 2014/09/30 15:45:19 radhermit Exp $

  30 Sep 2014; Tim Harder <radhermit@gentoo.org> -byobu-5.73.ebuild,
  -byobu-5.74.ebuild, -byobu-5.76.ebuild, -byobu-5.77.ebuild,
  -byobu-5.78.ebuild, -byobu-5.80.ebuild, -byobu-5.81.ebuild,
  -byobu-5.82.ebuild, -byobu-5.84.ebuild:
  Remove old.

*byobu-5.87 (30 Sep 2014)

  30 Sep 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.87.ebuild:
  Version bump.

*byobu-5.86 (31 Aug 2014)

  31 Aug 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.86.ebuild:
  Version bump.

*byobu-5.84 (04 Aug 2014)

  04 Aug 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.84.ebuild:
  Version bump.

*byobu-5.82 (26 Jul 2014)

  26 Jul 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.82.ebuild:
  Version bump.

*byobu-5.81 (08 Jul 2014)

  08 Jul 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.81.ebuild:
  Version bump.

*byobu-5.80 (03 May 2014)

  03 May 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.80.ebuild:
  Version bump.

*byobu-5.78 (24 Apr 2014)

  24 Apr 2014; Jeroen Roovers <jer@gentoo.org> +byobu-5.78.ebuild:
  Version bump.

*byobu-5.77 (31 Mar 2014)

  31 Mar 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.77.ebuild:
  Version bump.

  19 Mar 2014; Tim Harder <radhermit@gentoo.org> -byobu-5.69.ebuild,
  -byobu-5.70.ebuild, -byobu-5.71.ebuild, -byobu-5.72.ebuild:
  Remove old.

*byobu-5.76 (19 Mar 2014)

  19 Mar 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.76.ebuild:
  Version bump.

*byobu-5.74 (17 Mar 2014)

  17 Mar 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.74.ebuild:
  Version bump.

*byobu-5.73 (19 Feb 2014)

  19 Feb 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.73.ebuild:
  Version bump.

*byobu-5.72 (13 Feb 2014)

  13 Feb 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.72.ebuild:
  Version bump.

*byobu-5.71 (11 Feb 2014)
