@@ -3,18 +3,20 @@ Hash: SHA256
 
 DIST byobu_5.86.orig.tar.gz 654210 SHA256 aadeed5929bbb79f55491b79baa480933503da34abc83accc1069ddf2e20e6a8 SHA512 e811423714427ae8d781428a225344fa8909584cdb8d369645a00fea12da2740cbb18ca55e7e587d03eb3074b107576b8e9dd3eb5c36b0d01c2b31d77d559ceb WHIRLPOOL 57fa959816e8fc0f0267bdded3497f1b4024aa83e9850c2752dff0cdc4f21df02edc5b8c91ca8dd94c3ff60162786c4bf6f1c5d433599f0fa75d235ad20dee51
 DIST byobu_5.87.orig.tar.gz 654269 SHA256 10fbbc337a36f462b4208efac0f731217227018e6ea0fb8b534ca4d561f16923 SHA512 726b34ff82322e699e85a9d136bd1aab4c272852895891c03feeae8d32350560de31bbb24bc2f8bf101da7a57044183cf837e70da5d5975ea79a5395dfc77288 WHIRLPOOL 3562575fda1492fbb6587ae34108d521b617fae45dd6f50754e34cb062553904064a275f7853d99dc421068f4e1774c5f9f97aa96df93b0b9423a47a5bf1d97f
+DIST byobu_5.88.orig.tar.gz 658438 SHA256 3a793e47935af278368fdbcb4512308946c3bf2ff985d615a02aea45338865aa SHA512 ee604d51fa39c13021d5190a66100484e2880e1357e0993e4498f5e38f77b1a29e1f1a96fe6cb49a9926c60cf07f10c567bd6b3b9eefd43e0c4715ec29eccd12 WHIRLPOOL 8366204a97f1507087749df23cc79a5c9f13b908a65f7455bced9ba4b0de13b833cd0792676965ecf220f8d28ad8087a60ea7ba7a73541852a7bf1918335e772
 EBUILD byobu-5.86.ebuild 1045 SHA256 bdee9b731873abb58e2036b80eab40d7eb975af75b0ec0213fea749c2dd7da52 SHA512 8ddab22f03dc9eef536047a8cd487655e531466efab9f1aaeeec2704e3b68859314d97f92781b4f618e266e2e3a8794f180bed55256592560e6bde88da593eba WHIRLPOOL dac4a9c46dac477441bca4ad2ba195ba8ac1e2de370309e489280d6f2e221eff23f284f433a2b85298547f9d779c59bd8068bd9ec00369e55929b21916cb903c
 EBUILD byobu-5.87.ebuild 1045 SHA256 68ea8edb6fb836c93fa87ad092c1e3fe7a66adb781e9ca8704fb719c9e1e5629 SHA512 b14eb69703cc1e7dcb1d6ca6017f8f64ca81fea057519bcfcb10000c7bedcbe9e51da9193f359da8c4c79176e97e8270f72c473612ef88d699ba968a732e963a WHIRLPOOL 3574b26910c39151e96d2587bd036617cfc38ca2844e17ff2f3bf46581cccd20d13843692ea0114d31b28113e5eb3ec22bdfae4cc62d742b73d0c2bb07f6f145
-MISC ChangeLog 11774 SHA256 ff89688eb993389a7a705f5ce7525466474e2dfb42841581b5ecd1e1485db1c2 SHA512 c34f29e48ded0e0a117b9e1357514d1ebcd3f4f7df8c153b59b413bcb6826e3f262fde0ff566613f41456a1745548712c083ad35f6f081f033da0a79c641e05c WHIRLPOOL 109c13ad4319c6d9a7e48317a7d7217e8d3212754c597d5a5fabbcfad970fea9cd4638f292fa3fe3390971cc6cc0faf1f685d16822e31806260ae2086bdde9bb
+EBUILD byobu-5.88.ebuild 1045 SHA256 84cf0e86b5b21377c29af7f1082a4fba1b3554428440a30c26e33bd9fe4f2347 SHA512 9a01079dccd0f99442996af6dba98038e4baa257cd5324123baa01619dd94249c76fd2ce790977ea12af26769ae334d1b65321f875c4beea2c9dd49f2c9bbc33 WHIRLPOOL 63b264154f95e9671edec20aa7d9358f3fea4ad96fde4f7b567d9c42a5a7e59246b6a6912e64a1716782cf1a258ad46c0f6724cdbe5c99245f7de728bd4d29f2
+MISC ChangeLog 11887 SHA256 0b261ac0c5e1783efec9a1b605ec4e07c3b3080dddd9735ddf6c0c3b9a6f8700 SHA512 0da1012e7ab8b198ef035e9774d9f38fadf53fa9cbd797a6cd2379ec4f6afb2df9bf3ffd3c7ee8a5f5686860a56e5b96a9221d55ff100c0f783531d461213ab5 WHIRLPOOL 7313def1c66dc379a0fc984f789f3bf9f0884c4504c82b6c2ab53a03de775e3684e3b9c2148f401eef00782df88d2851cdfba23f07eb9264d71971ae8a8e7276
 MISC metadata.xml 814 SHA256 2893a1b1f1baa5368b5fb29b05455cd6be7f3c3a6baeedfcdc88e9591d67473c SHA512 0dc424578d083bb657747b12c200fc0f2f3a42415eee8587cce94adc5e09e9303ff7bc21c66c9e43a597e68b748f2bd23b8e47786f4c3093421cc7d996338db1 WHIRLPOOL 770a8ff6ef82f44b0773f318d897d14011a2a1b6223627d30baa5cf807a27c4381cef86a41372025014e9cea082d4600ab01834d7ccac2ce8940bf2b61182a26
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUKtAjAAoJEEqz6FtPBkyjV8oH/0Fu4qqM1h6kz7PppT4pzr22
-WsyMuQNfL8pMaCsaCzDQ8UNzci32p7cMJbKT9IIL2GAnosw718F7OUDVHNgVfP/3
-Nq5XCARPIGZdAahbVw4n8VF9Lpyv0/9/V5KsgzbtUUb0R5kdbonoqmjUFW4Crya1
-n6Qoh5nyChgX070PEApvj+s72AY6bK5xcQWXQOw5fHRoCG4Yp5P7ojjalT7JHWEe
-2ofC2qP5aL2IJVVt6BLCWnMYUzH7F6GoTZVr7EGC3QkoLovMAZfQ0Bn404eEuCHS
-QKbYw4SgrsIzGW/F5jbVMQYXKHy3gwFm2rO+xpBTHK1oZ04w2TnOHQamBNUDNGc=
-=yAZz
+iQEcBAEBCAAGBQJUsa+PAAoJEEqz6FtPBkyjFisH/iPLWouwIawPQETrnGSE20LV
+rqUVSNvJr9Zz9X1LUn94vKD72Xdhh5SJgjailiMJyrnaKuKvhOCqZKNFS4RyObAh
+SyCp8yHeHsu+yk5q0N0vGte0blFK1xo8MBW1vN1lffZRlOrzsC7+uxEPfYYlVcXD
+qQz4C8ureDXMtxwF7hALryHdKVL46f0qMKPYRJBZQn72yTDOR0gWR1euZIu6cCNt
+cDD2410fr7R3eNCH9LehwMtB7MMakQ2g8Nas1EUieCyBAT6TLTKLUsaokQ0wDJxG
+iSL/wNFhhfqoj1NThXidhHiFxEsMMkBQmqsIIBgS+lMvdQx6re5X+e+qZsOnkko=
+=QRgq
 -----END PGP SIGNATURE-----
