@@ -1,0 +1,42 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/byobu/byobu-5.88.ebuild,v 1.1 2015/01/10 23:02:23 radhermit Exp $
+
+EAPI=5
+PYTHON_COMPAT=( python2_7 )
+
+inherit python-single-r1
+
+DESCRIPTION="A set of profiles for the GNU Screen console window manager (app-misc/screen)"
+HOMEPAGE="http://byobu.co"
+SRC_URI="http://launchpad.net/${PN}/trunk/${PV}/+download/${P/-/_}.orig.tar.gz"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE="screen"
+REQUIRED_USE="${PYTHON_REQUIRED_USE}"
+
+RDEPEND="${PYTHON_DEPS}
+	dev-libs/newt[${PYTHON_USEDEP}]
+	screen? ( app-misc/screen )
+	!screen? ( app-misc/tmux )"
+
+src_prepare() {
+	python_fix_shebang .
+
+	# Set default system backend to screen
+	if use screen ; then
+		sed -i -e 's/#\(BYOBU_BACKEND\).*/\1="screen"/' etc/byobu/backend || die
+	fi
+}
+
+src_install() {
+	default
+
+	# Create symlinks for backends
+	dosym ${PN} /usr/bin/${PN}-screen
+	dosym ${PN} /usr/bin/${PN}-tmux
+
+	docompress -x /usr/share/doc/${PN}
+}
