@@ -1,0 +1,13 @@
+DEFINED_PHASES=install prepare setup
+DESCRIPTION=A set of profiles for the GNU Screen console window manager (app-misc/screen)
+EAPI=5
+HOMEPAGE=http://byobu.co
+IUSE=screen python_targets_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=>=dev-lang/python-2.7.5-r2:2.7 dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] dev-libs/newt[python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),python_single_target_python2_7(+)] screen? ( app-misc/screen ) !screen? ( app-misc/tmux )
+REQUIRED_USE=python_targets_python2_7
+SLOT=0
+SRC_URI=http://launchpad.net/byobu/trunk/5.88/+download/byobu_5.88.orig.tar.gz
+_eclasses_=eutils	f99a767f569b1f0731b3a1edd17c1d11	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	ed2ee20dc74a34be60f5b1b500e92a5b	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=87fd8b6ddfe73f83305ec248b74f7e28
